--- a/App/index.html
+++ b/App/index.html
@@ -8,5 +8,6 @@
 <body>
     
 </body>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./main.js"></script>
 </html>
